--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,23 @@
+
 h1, h2, h3, p, li, p {
   font-size: 1.3rem;
   font-family: 'Alegreya', serif;
   color: #000;
+  
+}
+h1:hover {
+  text-shadow: drop-shadow(0 0 2em #646cffaa);
 }
 
 .cuerpo {
   background-color: #fff;
   padding: 10px;
-  border-radius: 15px;
-  margin: 10px;
-  border-color: #000;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
+
 .barra {
   padding: 10px;
   border-radius: 20px;
@@ -52,3 +59,43 @@ li{
   -moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
 
 }
+
+#selfie:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+
+
+/*
+
+
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+*/
