--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,13 @@ li{
   }
 }
 */
+
+.card {
+  border: none;
+}
+
+.imagen-lista {
+  max-width: 100%;
+  max-height: 100px;
+  object-fit: contain;
+}
