--- a/src/App.css
+++ b/src/App.css
@@ -1,111 +1,123 @@
+/* Global styles */
+:root {
+  --primary-color: #000;
+  --background-color: #fff;
+  --box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
-h1, h2, h3, p, li, p {
-  font-size: 1.3rem;
+}
+
+/* Dark mode styles */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --primary-color: #fff;
+    --background-color: #000;
+    --box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  }
+}
+
+body {
   font-family: 'Alegreya', serif;
-  color: #000;
-  
-}
-h1:hover {
-  text-shadow: drop-shadow(0 0 2em #646cffaa);
+  color: var(--primary-color);
+  margin: 0;
+  background-color: var(--background-color);
 }
 
-.cuerpo {
-  background-color: #fff;
+/* Header styles */
+header {
+  text-align: center;
   padding: 10px;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 0;
+}
+
+/* Main styles */
+main {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.barra {
-  padding: 10px;
-  border-radius: 20px;
-  margin: 0 10px 10px 10px;
-  border-color: #000;
-}	
-
-h1{
-  font-size: 3rem;
-  font-weight: 700;
-  text-align: center;
-  padding: 10px;
+h2 {
+  font-size: 2rem;
+  font-weight: 500;
 }
 
-hr{
+p {
+  font-size: 1.3rem;
+  line-height: 1.5;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 1rem;
+}
+
+img#selfie {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 100%;
+  max-height: 300px;
+  box-shadow: var(--box-shadow);
+}
+
+.card {
+  border: none;
+  margin: 10px;
+  background-color: var(--background-color);
+}
+
+.imagen-lista {
+  max-height: 100px;
+  max-width: 100px;
+  object-fit: contain;
+}
+
+.card-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+
+hr {
   border: 0;
   height: 1px;
   background: #333;
   background-image: linear-gradient(to right, #ccc, #333, #ccc);
+  margin: 2rem 0;
 }
 
-h2{
-  font-size: 2rem;
-  font-weight: 500;
+/* Footer styles */
+footer {
   text-align: center;
+  padding: 10px;
 }
 
-li{
-  list-style-type: none;
-}
-
-
-#selfie {
-  border-radius: 100%;
-  max-width: 300px;
-  max-height: 300px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
-
-}
-
-#selfie:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-
-
-/*
-
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Media queries */
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1rem;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-*/
 
-.card {
-  border: none;
-}
 
-.imagen-lista {
-  max-width: 100%;
-  max-height: 100px;
-  object-fit: contain;
-}
