--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,3 @@
-/* Global styles */
 :root {
   --primary-color: #7E9CAE;
   --secondary-color: #FFB347;
@@ -10,10 +9,9 @@
   --card-background-color: #F2F2F2;
   --card-color: #000000;
   --imagen-filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.5));
-
 }
 
-
+  
 
 body {  
   font-family: 'Alegreya', serif;
@@ -23,7 +21,7 @@ body {
 }
 
 /* Header styles */
-header {
+.header {
   text-align: center;
   padding: 10px;
 }
@@ -139,7 +137,7 @@ hr {
 }
 
 /* Footer styles */
-footer {
+.footer {
   text-align: center;
   padding: 10px;
 }
