--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,11 +13,11 @@
 
   
 
-body {  
+.App {  
   font-family: 'Alegreya', serif;
   color: var(--text-color);
   margin: 0;
-  background-color: var(--background-color);
+  background-color: var(--background-color) !important;
 }
 
 /* Header styles */
